objects/EUR_CRM_Order_limits__mdt.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FR</fullName>
                    <default>true</default>
                    <label>FR</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Delivery_number_limit__c</fullName>
        <label>Delivery number limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_LeadTime__c</fullName>
        <inlineHelpText>days to nearest delivery from today</inlineHelpText>
        <label>Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_MinDelayBetweenDeliveries__c</fullName>
        <label>Min delay between deliveries</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_NumberOfMonthDueLatestDelivery__c</fullName>
        <label>Number of month due latest delivery</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Order_type__c</fullName>
        <label>Order type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Order</fullName>
                    <default>true</default>
                    <label>Order</label>
                </value>
                <value>
                    <fullName>Presales</fullName>
                </value>
                <value>
                    <fullName>Credit_Note</fullName>
                </value>
                <value>
                    <fullName>Transfer_order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_WorkWithDeliveriesAvailable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>WorkWithDeliveriesAvailable</label>
        <type>Checkbox</type>
    </fields>
    <label>Order limits</label>
    <pluralLabel>Order limits</pluralLabel>
</CustomObject>